# objectiv-analytics

./: README.md  docker-compose.yaml  test-cla.md
bach/: Makefile  README.md  mypy.ini  proposals.md  requirements-dev.txt  setup.cfg
backend/: README.md  create_table.sql  requirements.txt
buhtuh/jupyter-lite/: .gitignore  README.md  requirements.txt  setup.cfg
buhtuh/jupyter-lite/app/: app.py
buhtuh/jupyter-lite/jupyter-lite/files/: Run BuhTuh Test Suite.ipynb  buhtuh-0.0.1-py3-none-any.whl  obj_pg_wrapper-0.0.1-py3-none-any.whl  pg wrapper test.ipynb  pg_wrapper_test.ipynb  website_analytics.ipynb
buhtuh/jupyter-lite/obj_pg_wrapper/: __init__.py  engine.py  test.py
checklock_holmes/: .gitignore  Graphing SqlModel Nodes.ipynb  Makefile  README.md  checklock-holmes.py  install_graph_tool.sh  main.py  mypy.ini  requirements.txt  settings.py  setup.cfg
modelhub/: Makefile  README.md  mypy.ini  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
notebooks/: Bach_problems_in_FA-v2.ipynb  Bach_problems_in_FA.ipynb  FunnelAnalysis-Experiments.ipynb  README.md  basic-product-analytics.ipynb  basic-user-intent.ipynb  explore-your-data.ipynb  feature-engineering.ipynb  feature-importance.ipynb  funnel-analysis.ipynb  model-hub-demo-notebook.ipynb  model-hub-logistic-regression.ipynb  modelhub-logistic-regression.ipynb  notebook_engine_checker.py  open-taxonomy-how-to.ipynb  refactor.py  requirements-dev.txt  sklearn-example.ipynb
schema/: CONTRIBUTING.md  README.md  base_schema.json  base_schema.json5
tracker/: .gitignore  .yarnrc.yml  CONTRIBUTING.md  (+4 more)
(+685 files in other folders)
