[metadata]
name = obj_pg_wrapper
version = 0.0.1
author = Objectiv
author_email = mike@objectiv.io
description = Nasty HTTP RPC PG wrapper
long_description = there is none
long_description_content_type = text/markdown
# TODO
#url = https://github.com/pypa/sampleproject
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
#    License :: OSI Approved :: TODO
    Operating System :: OS Independent
# TODO: set to production when ready
    Development Status :: 4 - Beta

[options]
install_requires =
python_requires = >=3.7
packages = find:
include_package_data = True
[options.packages.find]
where = .
exclude = tests, tests.*


[pycodestyle]
count = True
max-line-length = 110
statistics = True
